--- a/cute_examples/CMakeLists.txt
+++ b/cute_examples/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_executable(cute_example simpletest.cpp)
+option(CUTE_BUILD_EXAMPLES "Build the CUTE examples" TRUE)
+if(CUTE_BUILD_EXAMPLES)
+  add_executable(cute_example simpletest.cpp)
+endif()
