--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: cpp
 compiler:
   - clang
-script: mkdir -p build && cd build && cmake ../ && make && make test
+script: mkdir -p build && cd build && cmake ../ && make VERBOSE=1 && make test
 
