--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: cpp
 compiler:
   - clang
+before_install:
+  - sudo apt-get update -qq || true
+  - sudo apt-get install curl
+  - curl https://cmake.org/files/v3.3/cmake-3.3.2-Linux-x86_64.sh -o cmake.sh
+  - sudo sh cmake.sh --exclude-subdir --prefix=/usr/local
 script: mkdir -p build && cd build && cmake ../ && make VERBOSE=1 && make test
 
