--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_install:
   - sudo apt-get install curl
   - curl https://cmake.org/files/v3.3/cmake-3.3.2-Linux-x86_64.sh -o cmake.sh
   - sudo sh cmake.sh --exclude-subdir --prefix=/usr/local
-script: mkdir -p build && cd build && cmake ../ -DCUTE_ENABLE_COVERALLS=ON -DCMAKE_BUILD_TYPE=Debug -DCUTE_BUILD_TESTS=ON -DCUTE_ENABLE_GCOV=ON && make VERBOSE=1 && make test coveralls
-
+script:
+  - travis/build.sh
